--- a/Martify/Views/Dashboard.xaml
+++ b/Martify/Views/Dashboard.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Martify.Views"
-             xmlns:vm="clr-namespace:Martify.ViewModels"
+             xmlns:vm="clr-namespace:Martify.ViewModels" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="864"
              Style="{StaticResource Page_RadarReveal_Style}"
@@ -16,35 +17,51 @@
 
     <Grid>
         <Grid>
-            <Grid>
-                <Grid Width="500" Height="400"
-                      Margin="25,0,0,25"
-                      VerticalAlignment="Bottom"
-                      HorizontalAlignment="Left">
-                    <Border Background="White"
-                            CornerRadius="20">
+            <Border Background="White" 
+                    Margin="20,40,20,500"
+                    CornerRadius="30">
+                <Border.Effect>
+                    <DropShadowEffect Color="#80000000"
+                                      BlurRadius="15"
+                                      ShadowDepth="4"
+                                      Direction="270"
+                                      Opacity="0.3"/>
+                </Border.Effect>
+                <Grid>
+                    <TextBlock Margin="29,10,308,70"
+                               Text="Doanh Thu Hôm Nay"
+                               FontSize="25" FontFamily="Roboto Black"
+                               TextAlignment="Left"/>
 
-                    </Border>
+                    <StackPanel Orientation="Horizontal" 
+                                VerticalAlignment="Top" 
+                                HorizontalAlignment="Right"
+                                Margin="0,10,30,0"
+                                Width="Auto">
+
+                        <TextBlock Text="500%"
+                                   FontSize="25"
+                                   FontFamily="Roboto Medium"
+                                   VerticalAlignment="Center"
+                                   TextAlignment="Right"
+                                   Width="Auto"/>
+
+                        <materialDesign:PackIcon Kind="TrendingUp"
+                             Width="32"
+                             Height="32"
+                             Foreground="#3A5EEA"
+                             VerticalAlignment="Center"
+                             Margin="10,0,10,0"/>
+
+                        <TextBlock Text="100.000.000VND"
+                                   FontSize="25"
+                                   FontFamily="Roboto Medium"
+                                   VerticalAlignment="Center"
+                                   TextAlignment="Right"
+                                   Width="Auto"/>
+                    </StackPanel>
                 </Grid>
-
-                <Grid Width="500" Height="251"
-                      Margin="25,25,0,0"
-                      VerticalAlignment="Top"
-                      HorizontalAlignment="Left">
-                    <Border Background="White"
-                            CornerRadius="20">
-
-                    </Border>
-                </Grid>
-
-                <Grid Width="300" Height="670"
-                      Margin="539,0,0,0"
-                      VerticalAlignment="Center"
-                      HorizontalAlignment="Left">
-                    <Border Background="White"
-                            CornerRadius="20"/>
-                </Grid>
-            </Grid>
+            </Border>
         </Grid>
     </Grid>
 </UserControl>
